--- a/popup.css
+++ b/popup.css
@@ -1,96 +1,97 @@
-  body {
-    min-width:240px;
-    max-height:300px;
-    padding: 0px;
-    margin: 0px;
-    font-family: -apple-system, BlinkMacSystemFont, 
-    "Segoe UI", "Roboto", "Oxygen", 
-    "Ubuntu", "Cantarell", "Fira Sans", 
+body {
+    min-width: 240px;
+    max-height: 300px;
+    height: 300px;
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
     color: rgb(70, 70, 70);
-  }       
+}
 
-  ul {
+ul {
     list-style-type: none;
-    padding: 0px;
-  }
+    padding: 0;
+}
 
-  .menu-row {
-      width:100%;
-      justify-content: space-between;
-      display: flex;
-      transition: visibility 0s, opacity 0.5s linear;
-      background-color: rgb(70, 70, 70);
-  }
+.menu-row {
+    width: 100%;
+    justify-content: space-between;
+    display: flex;
+    transition: visibility 0s, opacity 0.5s linear;
+    background-color: rgb(70, 70, 70);
+}
 
-  .menu-tab {
-      color: white;
-      background-color: rgb(70, 70, 70);
-      flex-grow: 1;
-      padding: 10px;
-      text-align: center;
+.menu-tab {
+    color: white;
+    background-color: rgb(70, 70, 70);
+    flex-grow: 1;
+    padding: 10px;
+    text-align: center;
+}
 
-  }
+table {
+    width: 100%;
+    border-collapse: collapse;
 
-  table {
-      width: 100%;
-      border-collapse: collapse;
+}
 
-  }
-  td {
+td {
     overflow: hidden;
     max-width: 100px;
     white-space: nowrap;
-    padding: 0px 5px;
-  }
+    padding: 0 5px;
+}
 
-   .tr-min-width {
+.tr-min-width {
     text-align: center;
     width: 1%;
-   }
+}
 
-  .text-center {
+.text-center {
     text-align: left;
-  }
+}
 
-  .text-left {
+.text-left {
     text-align: left;
-  }
+}
 
-  .hide {
+.hide {
     visibility: hidden;
-  }
-  
-  .row:hover td.hide {
-    visibility: visible !important;
-  }
+}
 
-  .content-header {
+.row:hover td.hide {
+    visibility: visible !important;
+}
+
+.content-header {
     padding: 5px 5px;
     color: white;
     background-color: rgb(70, 70, 70);
-  }
+}
 
-  #menu-settings {
-      display: flex;
-      align-content: center;
-      justify-content: center;
-  }
+#menu-settings {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
 
-  #settings {
-      width: 18px;
-      height: 18px;
-      margin: auto;
-      padding: 0px 5px;
-      -webkit-transition: -webkit-transform .5s ease-in-out;
-      -ms-transition: -ms-transform .5s ease-in-out;
-      transition: transform .5s ease-in-out;  
-  }
-  
-  #settings:hover {
-      transform:rotate(360deg);
-      -ms-transform:rotate(180deg);
-      -webkit-transform:rotate(180deg);
-      cursor: pointer;
-  }
+#settings {
+    width: 18px;
+    height: 18px;
+    margin: auto;
+    padding: 0px 5px;
+    -webkit-transition: -webkit-transform .5s ease-in-out;
+    -ms-transition: -ms-transform .5s ease-in-out;
+    transition: transform .5s ease-in-out;
+}
+
+#settings:hover {
+    transform: rotate(360deg);
+    -ms-transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    cursor: pointer;
+}
 
